js beginnings and other

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Demo HTML</title>
-  <meta name="author" content="demo">
+  <title>Bus Mall</title>
+  <meta name="peter-cole" content="bus-mall">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+  <img id="picture-1" src=""/>
+  <img id="picture-2" src=""/>
+  <img id="picture-3" src=""/>
 
   <script src="app.js"></script>
 </body>
