most I got day one

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-  <img id="picture-1" src=""/>
-  <img id="picture-2" src=""/>
-  <img id="picture-3" src=""/>
+  <img id="placeholder-0" src=""/>
+  <img id="placeholder-1" src=""/>
+  <img id="placeholder-2" src=""/>
 
   <script src="app.js"></script>
 </body>
