Chart Progress in index and app

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Bus Mall</title>
-  <meta name="peter-cole" content="bus-mall">
-  <link rel="stylesheet" href="style.css">
+  <meta name="petr-cole" content="bus-mall">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -13,6 +13,10 @@
   <img id="placeholder-1" src=""/>
   <img id="placeholder-2" src=""/>
 
-  <script src="app.js"></script>
+  <canvas id='chart' width="500" height="500"></canvas>
+
+  <script src="./app.js"></script>
+  <script src="https://data.jsdelivr.com/v1/package/npm/chart.js/badge)](https://www.jsdelivr.com/package/npm/chart.js"></script>
+
 </body>
 </html>
