--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Bus Mall</title>
   <meta name="petr-cole" content="bus-mall">
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -13,10 +13,10 @@
   <img id="placeholder-1" src=""/>
   <img id="placeholder-2" src=""/>
 
-  <canvas id='chart' width="500" height="500"></canvas>
+  <canvas id='chart' width="500" height="100"></canvas>
 
-  <script src="./app.js"></script>
-  <script src="https://data.jsdelivr.com/v1/package/npm/chart.js/badge)](https://www.jsdelivr.com/package/npm/chart.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="https://www.jsdelivr.com/package/npm/chart.js"></script>
 
 </body>
 </html>
