--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
   <img id="placeholder-0" src=""/>
   <img id="placeholder-1" src=""/>
   <img id="placeholder-2" src=""/>
+  <div id="counter"></div>
 
-  <canvas id='chart' width="500" height="100"></canvas>
+  <!-- <canvas id='chart' width="500" height="100"></canvas> -->
 
   <script src="./js/app.js"></script>
-  <script src="https://www.jsdelivr.com/package/npm/chart.js"></script>
+  <!-- <script src="https://www.jsdelivr.com/package/npm/chart.js"></script> -->
 
 </body>
 </html>
