--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-  <img id="placeholder-0" src=""/>
-  <img id="placeholder-1" src=""/>
-  <img id="placeholder-2" src=""/>
+  <p id="head">Select <span id="tally">10</span> more pictures, out of <span id="max"></span></p>
+    <img id="placeholder-0" src=""/>
+    <img id="placeholder-1" src=""/>
+    <img id="placeholder-2" src=""/>
   <canvas id="chart" width="500" height="100"></canvas>
   <script src="./js/app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
