--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Bus Mall</title>
@@ -9,12 +10,14 @@
 </head>
 
 <body>
-  <p id="head">Select <span id="tally">10</span> more pictures, out of <span id="max"></span></p>
-    <img id="placeholder-0" src=""/>
-    <img id="placeholder-1" src=""/>
-    <img id="placeholder-2" src=""/>
+  <p><span id="head">Select <span id="tally"></span> more pictures, out of <span id="max"></span></span>
+    <span id="clear"></span> <span id="reload"></span></p>
+  <img class="threePics" id="placeholder-0" src="" />
+  <img class="threePics" id="placeholder-1" src="" />
+  <img class="threePics" id="placeholder-2" src="" />
   <canvas id="chart" width="500" height="100"></canvas>
   <script src="./js/app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
 </body>
+
 </html>
